changed passwords to env variables

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "KSajeev@5",
+    "password": "",
     "database": "reactfullstackdb",
     "host": "localhost",
     "dialect": "mysql"
